--- a/Vism oblig 4/BredeJ/shadedCube.html
+++ b/Vism oblig 4/BredeJ/shadedCube.html
@@ -71,6 +71,8 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
+<script type "text/javascript" src="../Common/transform.js"></script>
+<script type "text/javascript" src="../Common/renderer.js"></script>
 <script type="text/javascript" src="shadedCube.js"></script>
 
 <body>
@@ -89,7 +91,6 @@ main()
         <button id = "ButtonX">Rotate X</button>
         <button id = "ButtonY">Rotate Y</button>
         <button id = "ButtonZ">Rotate Z</button>
-        <button id = "ButtonT">Toggle Rotation</button>
         
     </p>
     <p>
