--- a/Vism oblig 4/BredeJ/shadedCube.html
+++ b/Vism oblig 4/BredeJ/shadedCube.html
@@ -73,6 +73,8 @@ main()
 <script type="text/javascript" src="../Common/MV.js"></script>
 <script type "text/javascript" src="../Common/transform.js"></script>
 <script type "text/javascript" src="../Common/renderer.js"></script>
+<script type "text/javascript" src="../Common/gameobject.js"></script>
+<script type "text/javascript" src="../Common/mesh.js"></script>
 <script type="text/javascript" src="shadedCube.js"></script>
 
 <body>
