--- a/Vism oblig 4/BredeJ/GameEngine.html
+++ b/Vism oblig 4/BredeJ/GameEngine.html
@@ -75,7 +75,7 @@ main()
 <script type "text/javascript" src="../Common/renderer.js"></script>
 <script type "text/javascript" src="../Common/gameobject.js"></script>
 <script type "text/javascript" src="../Common/mesh.js"></script>
-<script type="text/javascript" src="shadedCube.js"></script>
+<script type="text/javascript" src="GameEngine.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="720" height="720">
