--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@ main()
 }
 </script>
 
-<script type="text/javascript" src="../Common/webgl-utils.js"></script>
-<script type="text/javascript" src="../Common/initShaders.js"></script>
-<script type="text/javascript" src="../Common/MV.js"></script>
-<script type "text/javascript" src="../Common/transform.js"></script>
-<script type "text/javascript" src="../Common/renderer.js"></script>
-<script type "text/javascript" src="../Common/gameobject.js"></script>
-<script type "text/javascript" src="../Common/mesh.js"></script>
-<script type="text/javascript" src="GameEngine.js"></script>
+<script type="text/javascript" src="./Common/webgl-utils.js"></script>
+<script type="text/javascript" src="./Common/initShaders.js"></script>
+<script type="text/javascript" src="./Common/MV.js"></script>
+<script type="text/javascript" src="./Common/transform.js"></script>
+<script type="text/javascript" src="./Common/renderer.js"></script>
+<script type="text/javascript" src="./Common/gameobject.js"></script>
+<script type="text/javascript" src="./Common/mesh.js"></script>
+<script type="text/javascript" src="./Common/GameEngine.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="720" height="720">
