--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ main()
 <script type="text/javascript" src="./Common/gameobject.js"></script>
 <script type="text/javascript" src="./Common/mesh.js"></script>
 <script type="text/javascript" src="./Common/GameEngine.js"></script>
+<script type="text/javascript" src="./Common/camera.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="720" height="720">
