Testing github deployment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <script type="text/javascript" src="./Scripts/camera.js"></script> -->
 
 <body>
-  
+    <h1>For testing only</h1>
     <p> 
         <button id ="Right">Right</button>
         <button id ="Left">Left</button>
